# fdk-aac-enc

./: LICENSE  README.md  fdk-aac-enc.cabal  stack.yaml
app/: Main.hs
src/: Main.hs
src/Audio/: AacOut.hs  AacOutputStream.hs  FdkAac.hs  ModuloBufferPlaypen.hs  X.hs
