name:                fdk-aac-enc
version:             0.1.0.0
synopsis:            Wrapper around the Frauenhofer ISO-14496-3 AAC Encoder
description:         Please see README.md
homepage:            https://github.com/sheyll/fdk-aac-enc#readme
license:             BSD3
license-file:        LICENSE
author:              Sven Heyll, Lindenbaum GmbH
maintainer:          sven.heyll@lindenbaum.eu
copyright:           2016 Lindenbaum GmbH
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Audio.FdkAac
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  build-depends:       base >= 4.9 && < 5
                     , bytestring >= 0.10.8 && < 0.11
                     , conduit >= 1.2.7 && < 1.3
                     , conduit-extra >= 1.1 && < 1.2
                     , conduit-network-rtp >= 0.1 && < 0.2
                     , containers >= 0.5 && < 0.6
                     , inline-c >= 0.5.5 && < 0.5.6
                     , isobmff-builder >= 0.11.0.0 && < 0.12
                     , network >= 2.6 && < 2.7
                     , resourcet >= 1.1 && < 1.2
                     , streaming-commons >= 0.1 && < 0.2
                     , text >= 1.2.2.1 && < 2
                     , vector >= 0.11 && < 0.12
  c-sources:           src/Audio/FdkAac.c
  -- These flags will be passed to the C compiler
  cc-options:          -Wall -O2
  -- Libraries to link the code with.
  extra-libraries:     m
  PkgConfig-Depends:   fdk-aac >= 0.1.4

executable fdk-aac-enc
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , MultiParamTypeClasses
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  build-depends:       base >= 4.9 && < 5
                     , fdk-aac-enc
                     , isobmff-builder >= 0.11.0.0
                     , conduit >= 1.2.7 && < 1.3
                     , containers >= 0.5 && < 0.6
                     , inline-c >= 0.5.5 && < 0.5.6
