name:                fdk-aac-enc
version:             0.1.0.0
synopsis:            Wrapper around the Frauenhofer ISO-14496-3 AAC Encoder
description:         Please see README.md
homepage:            https://github.com/sheyll/fdk-aac-enc#readme
license:             BSD3
license-file:        LICENSE
author:              Sven Heyll, Lindenbaum GmbH
maintainer:          sven.heyll@lindenbaum.eu
copyright:           2016 Lindenbaum GmbH
category:            Sound
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Audio.FdkAac
                     , Audio.AacOutputStream
  default-language:    Haskell2010
  ghc-options:       -O2 -Wall -funbox-strict-fields -fno-warn-unused-do-bind -fprint-explicit-kinds
  default-extensions:  BangPatterns
                     , ConstraintKinds
                     , CPP
                     , DataKinds
                     , DefaultSignatures
                     , DeriveDataTypeable
                     , DeriveFunctor
                     , DeriveGeneric
                     , DuplicateRecordFields
                     , FlexibleInstances
                     , FlexibleContexts
                     , FunctionalDependencies
                     , GADTs
                     , GeneralizedNewtypeDeriving
                     , KindSignatures
                     , MultiParamTypeClasses
                     , NamedFieldPuns
                     , OverloadedStrings
                     , QuasiQuotes
                     , RecordWildCards
                     , RankNTypes
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TupleSections
                     , TypeApplications
                     , TypeFamilies
                     , TypeInType
                     , TypeOperators
                     , TypeSynonymInstances
                     , UnicodeSyntax
  build-depends:       base >= 4.9 && < 5
                     , bytestring >= 0.10.8 && < 0.11
                     , containers >= 0.5 && < 0.6
                     , inline-c >= 0.5.5 && < 0.5.6
                     , isobmff-builder >= 0.11.0.0 && < 0.12
                     , spool >= 0.1 && < 0.2
                     , time
                     , text >= 1.2.2.1 && < 2
                     , vector >= 0.11 && < 0.12
  c-sources:           src/Audio/FdkAac.c
  -- These flags will be passed to the C compiler
  cc-options:          -Wall -O2
  -- Libraries to link the code with.
  extra-libraries:     m
  PkgConfig-Depends:   fdk-aac >= 0.1.4
